testdata/typechecker/error/arrays/portfolio_UndefNestedArray.java
// Tests that nested array declarations of an undefined class error.

int main() {
    UndefClass[][] a;
    return 0;
}
